fix: tag line wrap on phones

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3168,12 +3168,12 @@ section.intro header p {
 }
 @media screen and (max-width: 736px) {
   section.intro header p {
-    font-size: 1rem !important;
+    font-size: 0.9rem !important;
   }
 }
 @media screen and (max-width: 480px) {
   section.intro header p {
-    font-size: 1rem !important;
+    font-size: 0.8rem !important;
   }
 }
 
